--- a/main.html
+++ b/main.html
@@ -3,132 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Kanit', sans-serif;
-            background-color: #f0f0f0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .chat-container {
-            width: 1000px;
-            height: 600px;
-            background-color: #8B0000;
-            border-radius: 10px;
-            display: flex;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        }
-
-        .sidebar {
-            width: 200px;
-            background-color: #FFF3D4;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .profile {
-            width: 100px;
-            height: 100px;
-            background-color: #4CAF50;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        .menu-item {
-            padding: 10px;
-            margin: 5px 0;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .menu-item:hover {
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-
-        .logout {
-            margin-top: auto;
-            color: #ff0000;
-        }
-
-        .chat-area {
-            flex-grow: 1;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .language-switcher {
-            display: flex;
-            justify-content: flex-end;
-            padding: 10px;
-            gap: 10px;
-        }
-
-        .lang-button {
-            width: 30px;
-            height: 20px;
-            cursor: pointer;
-            border: 1px solid #ddd;
-            border-radius: 3px;
-            background-size: cover;
-            background-position: center;
-        }
-
-        .thai-flag {
-            background-color: #ff0000;
-        }
-
-        .eng-flag {
-            background-color: #00247d;
-        }
-
-        .chat-messages {
-            flex-grow: 1;
-            padding: 20px;
-            overflow-y: auto;
-        }
-
-        .chat-input {
-            padding: 20px;
-            background-color: #f8f8f8;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .chat-input input {
-            flex-grow: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            outline: none;
-        }
-
-        .chat-input button {
-            padding: 10px 20px;
-            background-color: #8B0000;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .chat-input button:hover {
-            background-color: #6B0000;
-        }
-    </style>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="chat-container">
