--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
         .container {
             width: 100%;
             height: 100vh;
-            background-color: #cc0000;
+            background-color: #ae2218;
             padding: 20px;
             position: relative;
         }
@@ -40,7 +40,6 @@
         .circle {
             width: 24px;
             height: 24px;
-            background-color: #00cc00;
             border-radius: 50%;
         }
 
@@ -57,18 +56,21 @@
             border-radius: 8px;
             padding: 20px;
             overflow-y: auto;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .box-title {
             font-size: 24px;
             margin-bottom: 15px;
             color: #333;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .box-content {
             font-size: 16px;
             line-height: 1.6;
             color: #666;
+            
         }
     </style>
 </head>
