changes green word

--- a/main.html
+++ b/main.html
@@ -29,11 +29,11 @@
                     window.location.href = 'login.html'; 
                 });
                 document.getElementById('newBtn').addEventListener('click', function () {
-                    // เปลี่ยนหน้าไปยังหน้า Login
+                    // เปลี่ยนหน้าไปยังหน้า new
                     window.location.href = 'new.html'; 
                 });
                 document.getElementById('helpBtn').addEventListener('click', function () {
-                    // เปลี่ยนหน้าไปยังหน้า Login
+                    // เปลี่ยนหน้าไปยังหน้า help
                     window.location.href = 'help.html'; 
                 });
             </script>
