edit login window.location.href = "main.html";

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         function handleCredentialResponse(response) {
             console.log("Encoded JWT ID token: " + response.credential);
             // You can now send this token to your backend for verification
-            window.location.href = "your_target_page.html";
+            window.location.href = "main.html";
         }
     </script>
 </body>
